--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prestart": "yarn",
     "prepublishOnly": "rm -rf ./dist && npm run build",
     "start": "webpack-dev-server --config ./config/webpack.config.dev.js",
-    "build": "webpack --config ./config/webpack.config.prod.js"
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
