--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "typings": "types/index.d.ts",
   "scripts": {
     "prestart": "yarn",
-    "prepublishOnly": "rm -rf ./dist && npm run build",
-    "start": "webpack-dev-server --config ./config/webpack.config.dev.js",
-    "build": "webpack --config ./config/webpack.config.prod.js",
+    "prepublishOnly": "rm -rf ./dist && npm run build-lib",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build-lib": "webpack --config ./config/webpack.config.prod.js",
     "release": "release-it"
   },
   "repository": {
@@ -76,6 +77,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-scripts": "^3.1.1",
     "react-sortable-hoc": "^1.9.1",
     "release-it": "^12.3.3",
     "style-loader": "^0.23.1",
